# cmake_simple

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
app1/: CMakeLists.txt  main.c
app2/: CMakeLists.txt  main.c
cmk/: cortex-m.cmake  gcc.cmake
print_module/: CMakeLists.txt
print_module/inc/: module.h
print_module/src/: module.c
